--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
-    <link rel="manifest" href="imgs/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/site.webmanifest">
 </head>
 
 <body class="bg-dark">
-    <img src="imgs/logo.jpg" alt="Bull vs. Bear" width="88" height="88">
+    <img src="/assets/images/logo.jpg" alt="Bull vs. Bear" width="88" height="88">
     <main class="container">
 
         <div class="search-container">
